[package]
name = "ivm-db"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
alloy = { workspace = true, features = ["rlp"] }
thiserror = { workspace = true }
sha2 = { workspace = true }
reth-db = { workspace = true }
reth-db-api = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }

ivm-abi = { workspace = true }
ivm-proto = { workspace = true }
ivm-eip4844 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }