[package]
name = "http-gateway"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

proto = { path = "../proto" }
