[package]
name = "mock-consumer"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
alloy = { workspace = true, features = ["provider-anvil-node", "full", "contract", "transport-http", "transport-ws", "network", "providers", "pubsub", "signer-local", "signer-keystore", "rpc-types-debug", "rpc-types-trace", "json-rpc", "rpc-client", "rlp", "sol-types"] }

ivm-abi = { workspace = true }
contracts = { workspace = true }
ivm-db = { workspace = true }
ivm-proto = { workspace = true }
ivm-test-utils = { workspace = true }
