[package]
name = "ivm-mock-consumer"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
alloy = { workspace = true }

ivm-abi = { workspace = true }
ivm-contracts = { workspace = true }
ivm-db = { workspace = true }
ivm-proto = { workspace = true }
ivm-test-utils = { workspace = true }
