[package]
name = "proto"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
borsh = { workspace = true }
reth-db = { workspace = true }
alloy = { workspace = true }
serde_with = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
