[package]
name = "proto"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
borsh = { workspace = true }
serde_with = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

# Tell cargo machete that these deps are required since they are in the
# generated code.
[package.metadata.cargo-machete]
ignored = ["prost", "serde", "tokio", "tonic_build", "borsh"]
