[package]
name = "remote-db"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "test_client"
path = "src/bin/test_client.rs"

[dependencies]
tonic = { version = "0.10", features = ["transport"] }
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "any", "macros"], default-features = false }
anyhow = "1.0"
tracing = "0.1"

[build-dependencies]
tonic-build = "0.10" 