[package]
name = "ivm-remote-db"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "test_client"
path = "src/bin/test_client.rs"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "any", "macros"], default-features = false }
anyhow = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }       