[package]
name = "ivm-remote-db"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["prost"]

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "test_client"
path = "src/bin/test_client.rs"

[dependencies]
tonic = { workspace = true }
tokio = { workspace = true }
prost = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "any", "macros"], default-features = false }

[build-dependencies]
tonic-build = { workspace = true }          