[package]
name = "scripts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "signer"
path = "src/main.rs"

[[bin]]
name = "local"
path = "src/local.rs"

[[bin]]
name = "node-test"
path = "src/node_test.rs"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["signal"] }
alloy = { workspace = true, features = ["provider-anvil-node", "full", "contract", "transport-http", "transport-ws", "network", "providers", "pubsub", "signer-local", "signer-keystore", "rpc-types-debug", "rpc-types-trace", "json-rpc", "rpc-client", "rlp", "sol-types"] }
k256 = { workspace = true }
dotenv = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }

proto = { workspace = true }
zkvm-executor = { workspace = true }
db = { workspace = true }
test-utils = { workspace = true }
clob-test-utils = { workspace = true }
clob-node = { workspace = true }
clob-programs = { workspace = true }
mock-consumer = { workspace = true }
mock-consumer-methods = { workspace = true }
contracts = { workspace = true }
