[package]
name = "ivm-scripts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "signer"
path = "src/main.rs"

[[bin]]
name = "local"
path = "src/local.rs"

[[bin]]
name = "node-test"
path = "src/node_test.rs"

[[bin]]
name = "proto-build"
path = "src/proto_build.rs"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["signal"] }
alloy = { workspace = true }
k256 = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
tonic-build = { workspace = true }
kairos-trie = { workspace = true }
bincode = { workspace = true }

clob-test-utils = { workspace = true }
clob-node = { workspace = true }
clob-programs = { workspace = true }
matching-game-programs = { workspace = true }
matching-game-core = { workspace = true }
matching-game-server = { workspace = true }
ivm-proto = { workspace = true }
ivm-abi = { workspace = true }
ivm-test-utils = { workspace = true }
ivm-contracts = { workspace = true }
ivm-eip4844 = { workspace = true }
ivm-mock-consumer = { workspace = true }
mock-consumer-programs = { workspace = true }
intensity-test-programs = { workspace = true }