[package]
name = "test-utils"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
alloy = { workspace = true, features = ["provider-anvil-node"] }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }

contracts = { path = "../contracts" }
