[package]
name = "zkvm-executor"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
alloy = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }

proto = { workspace = true }
zkvm = { workspace = true }
