[package]
name = "ivm-zkvm-executor"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
alloy = { workspace = true, features = ["signers"] }
thiserror = { workspace = true }
lz4_flex = { workspace = true }

ivm-proto = { workspace = true }
ivm-zkvm = { workspace = true }
ivm-eip4844 = { workspace = true }
ivm-abi = { workspace = true }
