[package]
name = "zkvm-tracing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }