[package]
name = "zkvm"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
risc0-zkvm = { workspace = true }
risc0-binfmt = { workspace = true }

sp1-sdk = { workspace = true }

[dev-dependencies]
alloy = { workspace = true, features = ["sol-types"] }
mock-consumer = { workspace = true }
mock-consumer-sp1 = { workspace = true }