[package]
name = "ivm-zkvm"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sp1-sdk = { workspace = true }

[dev-dependencies]
alloy = { workspace = true, features = ["sol-types"] }
mock-consumer = { workspace = true }
mock-consumer-programs = { workspace = true }