[package]
name = "ivm-zkvm"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
alloy = { workspace = true }
thiserror = { workspace = true }
sp1-sdk = { workspace = true }
sp1-core-executor = { workspace = true }

bincode = { workspace = true }
eyre = { workspace = true }

[dev-dependencies]
alloy = { workspace = true, features = ["sol-types"] }
ivm-mock-consumer = { workspace = true }
mock-consumer-programs = { workspace = true }