[package]
name = "matching-game-core"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
alloy = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
abi = { workspace = true }
trie-db = { workspace = true }
memory-db = { workspace = true }
keccak-hasher = { version = "0.16.0", default-features = false }
reference-trie = { version = "0.29.1", features = ["std"] }
kairos-trie = { workspace = true }
sha2 = "0.10"
tokio = { workspace = true }