[package]
name = "matching-game-core"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
alloy = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
abi = { workspace = true }
kairos-trie = { workspace = true }
sha2 = "0.10"
tokio = { workspace = true }