[package]
name = "matching-game-node"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
alloy = { workspace = true, features = ["full", "contract", "transport-http", "transport-ws", "network", "providers", "pubsub", "signer-local", "signer-keystore", "rpc-types-debug", "rpc-types-trace", "json-rpc", "rpc-client", "rlp", "sol-types"] }
tokio = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
trie-db = { workspace = true }
memory-db = { workspace = true }
keccak-hasher = { version = "0.16.0", default-features = false }
reference-trie = { version = "0.29.1", features = ["std"] }

# DB deps
bytes = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
paste = { workspace = true }
reth-db-api = { workspace = true }
reth-db = { workspace = true }

# local deps
abi = { workspace = true }
matching-game-core = { workspace = true }
matching-game-programs = { workspace = true }
proto = { workspace = true }

# zkvm deps
risc0-zkvm = { workspace = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0"
tempfile = "3"
mime = "0"
