[package]
name = "matching-game-programs"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
risc0-zkvm = { workspace = true }
matching-game-core = { workspace = true }
borsh = { workspace = true }
alloy = { workspace = true, features = ["full", "contract", "transport-http", "transport-ws", "network", "providers", "pubsub", "signer-local", "signer-keystore", "rpc-types-debug", "rpc-types-trace", "json-rpc", "rpc-client", "rlp", "sol-types"] }
zkvm = { workspace = true }
matching-game-test-utils = { workspace = true }
abi = { workspace = true }
trie-db = { version = "0.27.0", default-features = false }
keccak-hasher = { version = "0.16.0", default-features = false }
reference-trie = { version = "0.29.1", features = ["std"] }
memory-db = { workspace = true }

[build-dependencies]
risc0-build = { workspace = true }

[package.metadata.risc0]
methods = ["app"]
