[package]
name = "matching-game-programs"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
risc0-zkvm = { workspace = true }
matching-game-core = { workspace = true }
borsh = { workspace = true }
alloy = { workspace = true, features = ["full", "contract", "transport-http", "transport-ws", "network", "providers", "pubsub", "signer-local", "signer-keystore", "rpc-types-debug", "rpc-types-trace", "json-rpc", "rpc-client", "rlp", "sol-types"] }
zkvm = { workspace = true }
abi = { workspace = true }
kairos-trie = { workspace = true }
sha2 = "0.10"
serde_json = "1.0"

[build-dependencies]
risc0-build = { workspace = true }

[package.metadata.risc0]
methods = ["app"]
