[package]
name = "matching-game-server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
alloy = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
serde_json = "1.0"

# DB deps
borsh = { workspace = true }
serde = { workspace = true }

# local deps
abi = { workspace = true }
matching-game-core = { workspace = true }
matching-game-programs = { workspace = true }
proto = { workspace = true }
kairos-trie = { workspace = true }
test-utils = { workspace = true }

# zkvm deps
risc0-zkvm = { workspace = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0"
tempfile = "3"
mime = "0"
