[package]
name = "matching-game-test-utils"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
alloy = { workspace = true, features = ["full", "contract", "transport-http", "transport-ws", "network", "providers", "pubsub", "signer-local", "signer-keystore", "rpc-types-debug", "rpc-types-trace", "json-rpc", "rpc-client", "rlp", "sol-types"] }
matching-game-core = { workspace = true }
matching-game-contracts = { workspace = true }
test-utils = { workspace = true }
trie-db = { workspace = true }
memory-db = { workspace = true }
keccak-hasher = { version = "0.16.0", default-features = false }
reference-trie = { version = "0.29.1", features = ["std"] }
