[package]
name = "integration"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
rand = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
risc0-binfmt = { workspace = true }
alloy = { workspace = true }
alloy-rlp = { workspace = true }
alloy-sol-types = { workspace = true }
tempfile = { workspace = true }
sp1-sdk = { workspace = true }

zkvm-executor = { path = "../crates/executor" }
proto = { path = "../crates/proto"}
vapenation-methods = { path = "../programs/risc0/vapenation/methods"}
vapenation-core = { path = "../programs/common/vapenation-core"}
