[package]
name = "integration"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
rand = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
risc0-binfmt = { workspace = true }
alloy = { workspace = true }
alloy-rlp = { workspace = true }
alloy-sol-types = { workspace = true }
tempfile = { workspace = true }

# TODO: https://github.com/Ethos-Works/InfinityVM/issues/120
# sp1-sdk = { workspace = true }

zkvm-executor = { path = "../crates/zkvm-executor" }
proto = { path = "../crates/proto"}
vapenation-methods = { path = "../programs/risc0/vapenation/methods"}
vapenation-core = { path = "../programs/common/vapenation-core"}
